test/source/mss.gcl.tc.golden
Error Type Error ./test/source/mss.gcl:1:9-12
Cannot unify: Bool with Int