test/source/mss.gcl
con N : Bool
con A : array (0 .. N] of Int
